--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,6 @@
-altgraph==0.17.5
-asgiref==3.11.0
-beautifulsoup4==4.14.3
-brotli==1.2.0
-certifi==2026.1.4
-cffi==2.0.0
-charset-normalizer==3.4.4
-cryptography==46.0.3
-cssselect2==0.8.0
-diff-match-patch==20241021
 Django==5.2
-django-admin-numeric-filter==0.1.9
-django-allauth==65.14.0
-django-debug-toolbar==6.1.0
-django-extensions==4.1
-django-import-export==4.3.14
-django-leaflet==0.33.0
-django-taggit==6.1.0
-django-widget-tweaks==1.5.1
-dotenv==0.9.9
-et_xmlfile==2.0.0
-fonttools==4.61.1
-GDAL==3.12.1
-GeoAlchemy2==0.18.1
-geopandas==1.1.2
-google-api-core==2.29.0
-google-api-python-client==2.188.0
-google-auth==2.47.0
-google-auth-httplib2==0.3.0
-googleapis-common-protos==1.72.0
-httplib2==0.31.1
-idna==3.11
-macholib==1.16.4
-modulegraph==0.19.7
-numpy==2.4.0
-oauthlib==3.3.1
-openpyxl==3.1.5
-packaging==25.0
-pandas==2.3.3
-pillow==12.0.0
-proto-plus==1.27.0
-protobuf==6.33.4
-psycopg2==2.9.11
-psycopg2-binary==2.9.11
-py2app==0.28.9
-pyasn1==0.6.2
-pyasn1_modules==0.4.2
-pycparser==2.23
-pydotplus==2.0.2
-pydyf==0.12.1
-pygraphviz==1.14
-PyJWT==2.10.1
-pyogrio==0.12.1
-pyparsing==3.3.1
-pyphen==0.17.2
-pyproj==3.7.2
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.18
-PyQt5_sip==12.17.2
-python-dateutil==2.9.0.post0
+django_taggit==6.1.0
 python-dotenv==1.2.1
-pytz==2025.2
-requests==2.32.5
-requests-oauthlib==2.0.0
-rsa==4.9.1
-setuptools==80.9.0
-shapely==2.1.2
-six==1.17.0
-soupsieve==2.8.1
-SQLAlchemy==2.0.45
-sqlparse==0.5.5
+Requests==2.32.5
 stripe==14.2.0
-tablib==3.9.0
-tinycss2==1.5.1
-tinyhtml5==2.0.0
-typing_extensions==4.15.0
-tzdata==2025.3
-uritemplate==4.2.0
-urllib3==2.6.2
 weasyprint==68.0
-webencodings==0.5.1
-zopfli==0.4.0
